- Corrected CSS window sizing to allow for history at the bottom of the screen. - Updated the link sizing width and the exploit link dash gap.

--- a/Angular/cyberwar-ang1/client/css/app.css
+++ b/Angular/cyberwar-ang1/client/css/app.css
@@ -31,7 +31,7 @@ body {
 #stage-parent {
     text-align: center;
     width: 1680px;
-    height: 1000px;
+    height: 1025px;
     resize: both;
     margin-left: auto;
     margin-right: auto;
@@ -42,7 +42,7 @@ body {
 #main-view{
     width: 100%;
     height: 100%;
-    padding-top: 1%;
+    padding-top: .5%;
     padding-left: 1%;
     padding-bottom: 1%;
     border-style: solid;
@@ -50,7 +50,7 @@ body {
     border-width: 2px;
 }
 #left_aside {
-    height: 100%;
+    height: 98%;
     width: 20%;
     background-color: gray;
     float: left;
@@ -68,7 +68,7 @@ body {
     display: inline-block;
 }
 .ui-area {
-    height: 100%;
+    height: 98%;
     width: 24%;
     background-color: #E1E1E1;
     float: left;
@@ -97,7 +97,7 @@ body {
     position: inherit;
     justify-content: center;
     display: flex;
-    padding-top: 2%;
+    padding-top: 4%;
 }
 .submitBtn {
     background-color: white;
